# PHYSICS_ENGINE

./: .cland-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  config.txt  doxyfile
.github/workflows/: analysis.yml  matrix.yml  pages.yml  release.yml
docs/: tutorial.md
src/: main.c  physics.c  physics.h
tests/: test_physics.c
